[gd_scene load_steps=12 format=3 uid="uid://dmwlvjfj2fxb1"]

[ext_resource type="Script" uid="uid://cxi2ltx2yw2gh" path="res://scenes/weapons/guns/scripts/base/Gun.gd" id="1_76485"]
[ext_resource type="PackedScene" uid="uid://dahyafqvjnpxn" path="res://components/comp_scenes/interaction_component.tscn" id="2_mgo42"]
[ext_resource type="PackedScene" uid="uid://bctqlsgfum23e" path="res://scenes/weapons/bullets/FX/impact_flesh/scenes/normal_bullet_impact.tscn" id="2_vdc87"]
[ext_resource type="Resource" uid="uid://v4st1m4cne38" path="res://resources/guns/TommyGun.tres" id="3_3fbfd"]
[ext_resource type="Texture2D" uid="uid://bxm6uynhc06hf" path="res://scenes/UI/keys.png" id="3_imjbj"]
[ext_resource type="PackedScene" uid="uid://bpupxjsevyybh" path="res://scenes/weapons/drop_shining.tscn" id="4_eb8y7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_eb8y7"]
resource_local_to_scene = true
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_yyswi"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.0353567, 1.9684544), 0.0, 0.0, 0, 0, Vector2(0.17928663, 0.96291864), 0.0, 0.0, 0, 0, Vector2(0.8478477, 0.93023217), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.6613204, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_rbehg"]
curve = SubResource("Curve_yyswi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fp03h"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 2, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, -10, 0)
scale_curve = SubResource("CurveTexture_rbehg")
anim_offset_max = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mfrst"]
radius = 29.017237

[node name="Gun" type="Node2D" unique_id=1094384031]
position = Vector2(0, -0.9480543)
script = ExtResource("1_76485")
bullet_scene = ExtResource("2_vdc87")
gun_settings = ExtResource("3_3fbfd")
on_floor = true

[node name="gun_sprite" type="Sprite2D" parent="." unique_id=837767937]

[node name="shine_drop" parent="gun_sprite" unique_id=1116682318 instance=ExtResource("4_eb8y7")]
material = SubResource("CanvasItemMaterial_eb8y7")
process_material = SubResource("ParticleProcessMaterial_fp03h")

[node name="outline" type="Sprite2D" parent="gun_sprite" unique_id=55873763]

[node name="muzzle" type="Marker2D" parent="." unique_id=313242942]

[node name="flash_point" type="Marker2D" parent="." unique_id=1901676333]

[node name="fire_rate_timer" type="Timer" parent="." unique_id=844035944]
one_shot = true

[node name="Interaction_Component" parent="." unique_id=881789986 instance=ExtResource("2_mgo42")]
hover_sprite = ExtResource("3_imjbj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Component" unique_id=621324421]
shape = SubResource("CircleShape2D_mfrst")
debug_color = Color(0, 0.6509804, 0.13333334, 0)

[editable path="Interaction_Component"]
